--- a/Circles/ClubCircleList/ClubCircleExample.html
+++ b/Circles/ClubCircleList/ClubCircleExample.html
@@ -73,14 +73,14 @@ Point:
 
 
 <div class="ClubCircleListTitle">
-<img src="../../img/CircleImg/CircleTitle.jpg">
+<img src="../../img/CircleImg/CircleTitle.png">
 <p class="ClubCircleName">
 M*E*N*T*S*U*Y*U	
 </p>
 </div>
 
 <div class="ClubCircleListContent">
-<img src="../../img/CircleImg/CircleCategory.jpg">
+<img src="../../img/CircleImg/CircleCategory.png">
 <p class="ClubCircleListCategory">
 メンバー数
 </p>
@@ -90,7 +90,7 @@ M*E*N*T*S*U*Y*U
 </div>
 
 <div class="ClubCircleListContent">
-<img src="../../img/CircleImg/CircleCategory.jpg">
+<img src="../../img/CircleImg/CircleCategory.png">
 <p class="ClubCircleListCategory">
 活動日
 </p>
@@ -100,7 +100,7 @@ M*E*N*T*S*U*Y*U
 </div>
 
 <div class="ClubCircleListContent">
-<img src="../../img/CircleImg/CircleCategory.jpg">
+<img src="../../img/CircleImg/CircleCategory.png">
 <p class="ClubCircleListCategory">
 活動場所
 </p>
@@ -112,7 +112,7 @@ M*E*N*T*S*U*Y*U
 </div>
 
 <div class="ClubCircleListContent">
-<img src="../../img/CircleImg/CircleCategory.jpg">
+<img src="../../img/CircleImg/CircleCategory.png">
 <p class="ClubCircleListCategory">
 活動目的
 </p>
@@ -122,7 +122,7 @@ M*E*N*T*S*U*Y*U
 </div>
 
 </div>
-<img class="ClubCircleImg" src="../../img/CircleImg/MoaImg.jpg">
+<img class="ClubCircleImg" src="../../img/CircleImg/MoaImg.png">
 
 </div>
 
