--- a/Classes/Classes.html
+++ b/Classes/Classes.html
@@ -70,7 +70,7 @@ Point:
 
 <div id="MainContent">
 <div class="Classes">
-<h1 class="ClassesTitle">単位のその先へ。</h1>
+<h1 class="ClassesTitle"><font size="70px" color="orange">単位</font>のその先へ。</h1>
 </div>
 <p class="ClassesDescri">
 新学期に向けて履修登録するときにどんな授業かわからないままレジストしてしまうと…
@@ -92,8 +92,6 @@ Point:
 
 <div class="AnswerClasses">
 <a href=""><img class="AnswerClassesimg" src="../img/button/Answer/answer1-1.png"></a>
-<div id="ClassList">
-</div>
 </div>
 
 <div class="SeeClasses">
@@ -104,12 +102,8 @@ Point:
 </div>
 </div>
 <script type="text/javascript" src="../JS/jquery.js"></script>
+<script type="text/javascript" src="../JS/moa.js"></script>
 <script type="text/javascript">
-$(".AnswerClassesimg").click(function(){
-	$(".class").slideToggle(200,function(){
-		
-	})
-})
 
 $(".Side").hover(
 	function(){
