--- a/NewProjects/NewProject.html
+++ b/NewProjects/NewProject.html
@@ -70,7 +70,8 @@ Point:
 
 <div id="MainContent">
 <div class="NewProject">
-<h1 class="NewProjectTitle">アイディア、広げてみませんか？ </h1>
+<p class="NewProjectTitle">
+<font color="orange" size="70px">アイデア</font> <font size="40px">広</font><font size="30px">げてみませんか？</font> </p>
 </div>
 <p class="NewProjectDescri">
 このページは、新しいイベント・団体を立ち上げたい人が、学生みんなにＰＲするためのものです。こんなことを計画中！！こんな人募集！！など学生に伝えやすくします。
