--- a/TOP/AnswerAll.html
+++ b/TOP/AnswerAll.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<title>Circle</title>
+<title>AnswerAll</title>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <meta http-equiv="Content-Style-Type" content="text/css">
 <link rel="stylesheet" href="../CSS/Top.css" type="text/css">
@@ -70,17 +70,47 @@ Point:
 
 <div id="MainContent">
 <div id="Circle">
-<h1 id="CircleTitle"><font size="50px" color="orange">リア</font>ル、<font size="50px" color="orange">充</font>実してますか？</h1>
+<h1 id="CircleTitle">あなたの答えで出来てます、MoaTips。</h1>
 </div>
-<p id="CircleDescri">せっかく大学生なのだから、部活に入って仲間を作ったり、何かをやり通してみませんか？このページはAIUで活動している公式・非公式のクラブ・サークル情報を掲載しています。団体の名前・どんな活動をしているか・活動している人数・活動場所・一年のうちに開催する行事・みなさんに向けたPR・代表者の連絡先などがわかります。
-<br>
-気になってたあのサークルについて知りたい。
-<br>
-どこかの団体と何か共同でイベントをしてみたい。
-<br>
-ただ、このサークルが何かしているのか見てみたい。
-<br>
-そんな方はぜひご利用下さい！</p>
+<p id="CircleDescri">
+	Description
+</p>
+
+<div id="classatanswer">
+<h2 id="classatanswertitle">
+授業
+</h2>
+<div id="classatanswercontent">
+<div id="EAP" class="classcourse">
+EAP
+</div>
+<div id="BE" class="classcourse">
+BE</div>
+<div id="GB" class="classcourse">
+GB
+</div>
+<div id="GS" class="classcourse">
+GS
+</div>
+</div>
+<div id="abroadatanswer">
+<h2 id="abroadatanswer">
+留学
+</h2>
+<div id="abroadatanswercontent">
+content
+</div>
+</div>
+<div id="circleatanswer">
+クラブ＆サークル
+</div>
+<div id="newprojectatanswer">
+新企画
+</div>
+
+
+
+
 <div id="CultureCircles">
 <h2 id="CultureCirclesTitle">文化系</h2>
 <a href="" class="circle">MOA(Marketing Organization in AIU)</a>
@@ -187,7 +217,6 @@ Point:
 <script type="text/javascript" src="../JS/moa.js"></script>
 <script type="text/javascript">
 opacity(".circle");
-
 
 
 </script>
