--- a/TOP/Mypage.html
+++ b/TOP/Mypage.html
@@ -97,7 +97,7 @@ GPA:
 購入情報
 </div>
 <div id="BuyContent">
-購入情報→留学
+購入情報→授業、留学
 </div>
 </div>
 
@@ -106,7 +106,7 @@ GPA:
 回答情報
 </div>
 <div id="AnswerContent">
-回答情報→留学、サークル、新企画
+回答情報→授業、留学、サークル、新企画
 </div>
 </div>
 
@@ -114,16 +114,8 @@ GPA:
 
 </div>
 <script type="text/javascript" src="../JS/jquery.js"></script>
+<script type="text/javascript" src="../JS/moa.js"></script>
 <script type="text/javascript">
-$(".Side").hover(
-	function(){
-		$(this).css('background-color','#d4f4fc');
-	},function(){
-		$(this).css('background-color','white');
-
-	}
-)
-
 </script>
 </body>
 </html>
