--- a/NewProjects/NPanswer.html
+++ b/NewProjects/NPanswer.html
@@ -83,11 +83,11 @@ Point:
 <div class="inputbox"><textarea class="textarea" cols="63" rows="1"></textarea></div>
 <div class="inputdes">2.　以下の項目から当てはまるものを選んでください。</div>
 <div class="inputbox">
-	<input type="checkbox" id="NPAnswerQ1-1" value="1"><label for="CircleMemberQ1-1" class="checkbox"> 通年のクラブ＆サークル</label>
+	<input type="checkbox" id="NPAnswerQ1-1" value="1"><label for="NPAnswerQ1-1" class="checkbox"> 通年のクラブ＆サークル</label>
 	<br>
-	<input type="checkbox" id="NPAnswerQ1-2" ><label for="CircleMemberQ1-2" class="checkbox"> AIU祭の有志企画</label>
+	<input type="checkbox" id="NPAnswerQ1-2" ><label for="NPAnswerQ1-2" class="checkbox"> AIU祭の有志企画</label>
 	<br>
-	<input type="checkbox" id="NPAnswerQ1-3" ><label for="CircleMemberQ1-3"class="checkbox"> そこそこ参加している</label>
+	<input type="checkbox" id="NPAnswerQ1-3" ><label for="NPAnswerQ1-3"class="checkbox"> そこそこ参加している</label>
 </div>
 <div class="inputdes">3.　活動目的</div>
 <div class="inputbox"><textarea class="textarea" cols="63" rows="20"></textarea></div>
@@ -105,7 +105,7 @@ Point:
 	<div class="inputbox"><textarea class="textarea" cols="63" rows="15"></textarea></div>
 	<div class="inputdes">10.　代表者の名前・連絡先</div>
 <div class="inputbox"><textarea class="textarea" cols="63" rows="3"></textarea></div>
-	<input type="image" id="OpinionSubmitimg" src="../img/button/FinalAnswer/FinalAnswer1-1.png" width="300px">
+	<input type="image" id="OpinionSubmitimg" src="../img/button/FinalAnswer/FinalAnswer2-1.png" width="300px">
 </div>
 
 
@@ -118,7 +118,10 @@ Point:
 
 </div>
 <script type="text/javascript" src="../JS/jquery.js"></script>
+<script type="text/javascript" src="../JS/moa.js"></script>
 <script type="text/javascript">
+opacity(".checkbox");
+imgchange("#OpinionSubmitimg","FinalAnswer","finalanswer");
 $(".Side").hover(
 	function(){
 		$(this).css('background-color','#e3fadb');
