--- a/Circles/ClubCircleList/ClubCircleExample.html
+++ b/Circles/ClubCircleList/ClubCircleExample.html
@@ -122,7 +122,7 @@ M*E*N*T*S*U*Y*U
 </div>
 
 </div>
-<img class="ClubCircleImg" src="../../img/CircleImg/MoaImg.png">
+<img class="ClubCircleImg" src="../../img/CircleImg/MoaImg.jpg">
 
 </div>
 
