--- a/demo3.html
+++ b/demo3.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="CSS/Top.css" type="text/css">
 
 <meta http-equiv="Content-Script-Type" content="text/javascript">
-<title>WorldMapDemo</title>
+<title>demo3</title>
 </head>
 <body style="background-image : url(img/a9.png)">
 <div id="Container">
