--- a/Abroad/area1.html
+++ b/Abroad/area1.html
@@ -71,16 +71,17 @@ Point:
 
 <div id="MainContent">
 
-<div id="wmback">
+<div class="areas">
+<h1 class="AbroadTitle">ヨーロッパ</h1>
 </div>
 
-<div id="areas">
-<p>ヨーロッパ</p>
-<img id="area1" class="area" src="../img/wm/area1-1.png" >
+<div class="areatitlesheet">
+<a href="" class="areatitles">AIU</a>
 </div>
 
-<div id="uniAicons">
-<div id="sheet1">
+<img id="area1big" class="area" src="../img/wm/area1-1.png" width="600px" height="500px">
+
+<div class="area1icons">
 <a href=""><img id="uniA1" class="uniA" src="../img/wm/icon.png" width="10px"></a>
 <a href=""><img id="uniA2" class="uniA" src="../img/wm/icon.png" width="10px"></a>
 <a href=""><img id="uniA3" class="uniA" src="../img/wm/icon.png" width="10px"></a>
@@ -130,8 +131,8 @@ Point:
 <a href=""><img id="uniA47" class="uniA" src="../img/wm/icon.png" width="10px"></a>
 </div>
 
-</div>
 
+</div>
 </div>
 
 </div>
@@ -145,7 +146,7 @@ for(i=0;i<=47;i++){
 	hoveruniA(i);
 }
 
-
+opacity(".areatitles");
 //sideeffect;hover
 
 
