--- a/Circles/ClubCircleList/ClubCircleExample2.html
+++ b/Circles/ClubCircleList/ClubCircleExample2.html
@@ -3,16 +3,16 @@
 <title>NewProject</title>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <meta http-equiv="Content-Style-Type" content="text/css">
-<link rel="stylesheet" href="../CSS/Top.css" type="text/css">
+<link rel="stylesheet" href="../../CSS/Top.css" type="text/css">
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 </head>
-<body style="background-image : url(../img/a9.png)">
+<body style="background-image : url(../../img/a9.png)">
 <div id="Container">
 
 <div id="Sidebar">
 <div id="SideContent1">
 <div id="SideLogo">
-<img src="../img/uniA1-b.jpg" width="184px">
+<img src="../../img/uniA1-b.jpg" width="184px">
 </div>
 <div id="SideName">
 Name:
@@ -103,6 +103,8 @@ Point:
 <script type="text/javascript" src="../JS/jquery.js"></script>
 <script type="text/javascript" src="../JS/moa.js"></script>
 <script type="text/javascript">
+$('#').stickySidebar();
+
 $("#ProjectListBox").hide();
 clickslide(".SeeProjectimg","#ProjectListBox");
 opacity(".project");
