--- a/Classes/Classes.html
+++ b/Classes/Classes.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="../CSS/Top.css" type="text/css">
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 </head>
-<body style="background-image : url(../img/a9.png)">
+<body style="background-image : url(../img/back1.jpg)">
 <div id="Container">
 
 <div id="Sidebar">
@@ -91,7 +91,7 @@ Point:
 </p>
 
 <div class="AnswerClasses">
-<a href=""><img class="AnswerClassesimg" src="../img/button/Answer/answer1-1.png"></a>
+<a href=""><img class="AnswerClassesimg" src="../img/button/Answer/answer1-1 茶色.png"></a>
 </div>
 
 <div class="SeeClasses">
