--- a/Abroad/area1.html
+++ b/Abroad/area1.html
@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 <title>ヨーロッパ</title>
 </head>
-<body style="background-image : url(../img/a9.png)">
+<body style="background-image : url(../img/back1.jpg)">
 <div id="Container">
 
 <div id="Sidebar">
