--- a/Circles/ClubCircleList/ClubCircleExample.html
+++ b/Circles/ClubCircleList/ClubCircleExample.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="../../CSS/Top.css" type="text/css">
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 </head>
-<body style="background-image : url(../../img/a9.png)">
+<body style="background-image: url(../../img/back1.jpg)">
 <div id="Container">
 
 <div id="Sidebar">
@@ -14,10 +14,10 @@
 <div id="SideLogo">
 <img src="../../img/uniA1-b.jpg" width="184px">
 </div>
-<div id="SideName">
+<div id="SideName" class="Side">
 Name:
 </div>
-<div id="SidePoint">
+<div id="SidePoint" class="Side">
 Point:
 </div></a>
 </div>
@@ -75,22 +75,24 @@ Point:
 <div class="ClubCircleListTitle">
 <img src="../../img/CircleImg/sky/sky.png">
 <p class="ClubCircleName">
-M*E*N*T*S*U*Y*U	
+MoaTips
 </p>
 </div>
 
-<div class="ClubCircleListContent">
-<img class="ClubCircleListCategoryimg" src="../../img/CircleImg/sky/sky_s2.png">
+<div class="ClubCircleListCategorySet">
+<img class="ClubCircleListCategoryimg" src="../../img/CircleImg/sky/sky_s1.png">
 <p class="ClubCircleListCategory">
 メンバー数
 </p>
 <p class="ClubCircleListDifferent">
-右の写真は500*500の大きさのボックスに入るよぷ
+ここにそれぞれの 国境を越えて多面的な交流が進むグローバル化の時代には、多様な価値観や世界観を互いに認め合い、諸問題の解決に努めながら、それぞれが未来を切り拓いていく力が求められます。
+
+こうした認識のもと、国際教養大学は「国際教養（International Liberal Arts）」という新しい教学理念を掲げ、英語をはじめとする外国語の卓越したコミュニケーション能力と豊かな教養、グローバルな専門知識を身に付けた実践力のある人材を養成し、国際社会と地域社会に貢献することを理念としています。 がはいるお
 </p>
 </div>
 
-<div class="ClubCircleListContent">
-<img class="ClubCircleListCategoryimg" src="../../img/CircleImg/sky/sky_s2.png">
+<div class="ClubCircleListCategorySet">
+<img class="ClubCircleListCategoryimg" src="../../img/CircleImg/sky/sky_s1.png">
 <p class="ClubCircleListCategory">
 活動日
 </p>
@@ -99,8 +101,9 @@ M*E*N*T*S*U*Y*U
 </p>
 </div>
 
-<div class="ClubCircleListContent">
-<img class="ClubCircleListCategoryimg" src="../../img/CircleImg/sky/sky_s2.png">
+
+<div class="ClubCircleListCategorySet" >
+<img class="ClubCircleListCategoryimg" src="../../img/CircleImg/sky/sky_s1.png">
 <p class="ClubCircleListCategory">
 活動場所
 </p>
@@ -111,8 +114,10 @@ M*E*N*T*S*U*Y*U
 </p>
 </div>
 
-<div class="ClubCircleListContent">
-<img class="ClubCircleListCategoryimg" src="../../img/CircleImg/sky/sky_s2.png">
+
+
+<div class="ClubCircleListCategorySet">
+<img class="ClubCircleListCategoryimg" src="../../img/CircleImg/sky/sky_s1.png">
 <p class="ClubCircleListCategory">
 活動目的
 </p>
@@ -128,15 +133,8 @@ M*E*N*T*S*U*Y*U
 
 </div>
 <script type="text/javascript" src="../../JS/jquery.js"></script>
+<script type="text/javascript" src="../../JS/moa.js"></script>
 <script type="text/javascript">
-$(".Side").hover(
-	function(){
-		$(this).css('background-color','#e3fadb');
-	},function(){
-		$(this).css('background-color','white');
-
-	}
-)
 </script>
 </body>
 </html>
