--- a/Circles/ClubCircleList/ClubCircleExample2.html
+++ b/Circles/ClubCircleList/ClubCircleExample2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<title>NewProject</title>
+<title>ClubCircleExample</title>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <meta http-equiv="Content-Style-Type" content="text/css">
 <link rel="stylesheet" href="../../CSS/Top.css" type="text/css">
@@ -64,52 +64,79 @@ Point:
 <a href="">
 <div id="SideLogout" class="Side">
 ログアウト</div></a>
-
 </div>
 </div>
 
 <div id="MainContent">
-<div class="NewProject">
-<p class="NewProjectTitle">
-<font color="orange" size="10">アイデア</font>広げてみませんか</p>
-</div>
-<p class="NewProjectDescri">
-このページは、新しいイベント・団体を立ち上げたい人が、学生みんなにＰＲするためのものです。こんなことを計画中！！こんな人募集！！など学生に伝えやすくします。
-<br>
-学祭で何かを成し遂げてみたいとき、普段の生活でチャレンジしたいことができたとき、
-<br>
-ここの中にあなたの探していたものがあるかもしれません。
-<br>
-このページで自分のアイディアを広めたい方は、下の回答ボタンクリック！ 
-<br>フォーマットに企画の名前・代表者の連絡先・活動する目的・活動期間はいつからか・新規メンバー募集要項、PRしたい内容を記入して、送信ボタンでMOAに送ってください。 
+
+<div class="ClubCircleList">
+
+
+<div class="ClubCircleListTitle">
+<img src="../../img/CircleImg/sky/sky.png">
+<p class="ClubCircleName">
+M*E*N*T*S*U*Y*U
 </p>
-
-<div class="AnswerProject">
-<a href=""><img class="AnswerProjectimg" src="../img/button/Answer/answer2-1.png"></a>
 </div>
 
-<div class="SeeProject">
-<img class="SeeProjectimg" src="../img/button/SeeTips/seetips2-1.png">
-<div id="ProjectListBox">
-<a href="" class="project">MoaTips</a>
+<div class="ClubCircleListContent">
+<img class="ClubCircleListCategoryimg" src="../../img/CircleImg/sky/sky_s2.png">
+<p class="ClubCircleListCategory">
+メンバー数
+</p>
+<p class="ClubCircleListDifferent">
+右の写真は500*500の大きさのボックスに入るよぷ
+</p>
 </div>
+
+<div class="ClubCircleListContent">
+<img class="ClubCircleListCategoryimg" src="../../img/CircleImg/sky/sky_s2.png">
+<p class="ClubCircleListCategory">
+活動日
+</p>
+<p class="ClubCircleListDifferent">
+ここにそれぞれの内容がはいるお
+</p>
+</div>
+
+<div class="ClubCircleListContent">
+<img class="ClubCircleListCategoryimg" src="../../img/CircleImg/sky/sky_s2.png">
+<p class="ClubCircleListCategory">
+活動場所
+</p>
+<p class="ClubCircleListDifferent">
+ここにそれぞれの 国境を越えて多面的な交流が進むグローバル化の時代には、多様な価値観や世界観を互いに認め合い、諸問題の解決に努めながら、それぞれが未来を切り拓いていく力が求められます。
+
+こうした認識のもと、国際教養大学は「国際教養（International Liberal Arts）」という新しい教学理念を掲げ、英語をはじめとする外国語の卓越したコミュニケーション能力と豊かな教養、グローバルな専門知識を身に付けた実践力のある人材を養成し、国際社会と地域社会に貢献することを理念としています。 がはいるお
+</p>
+</div>
+
+<div class="ClubCircleListContent">
+<img class="ClubCircleListCategoryimg" src="../../img/CircleImg/sky/sky_s2.png">
+<p class="ClubCircleListCategory">
+活動目的
+</p>
+<p class="ClubCircleListDifferent">
+めんつゆの存在意義と神の存在について解き明かしてみせます。
+</p>
+</div>
+
+</div>
+<img class="ClubCircleImg" src="../../img/CircleImg/MoaImg.jpg">
 
 </div>
 
 </div>
-
-</div>
-</div>
-<script type="text/javascript" src="../JS/jquery.js"></script>
-<script type="text/javascript" src="../JS/moa.js"></script>
+<script type="text/javascript" src="../../JS/jquery.js"></script>
 <script type="text/javascript">
-$('#').stickySidebar();
+$(".Side").hover(
+function(){
+$(this).css('background-color','#e3fadb');
+},function(){
+$(this).css('background-color','white');
 
-$("#ProjectListBox").hide();
-clickslide(".SeeProjectimg","#ProjectListBox");
-opacity(".project");
-imgchange(".SeeProjectimg","SeeTips","seetips");
-imgchange(".AnswerProjectimg","Answer","answer");
+}
+)
 </script>
 </body>
 </html>
