--- a/Circles/ClubCircleList/ClubCircleExample.html
+++ b/Circles/ClubCircleList/ClubCircleExample.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="../../CSS/Top.css" type="text/css">
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 </head>
-<body style="background-image: url(../../img/back1.jpg)">
+<body>
 <div id="Container">
 
 <div id="Sidebar">
@@ -127,7 +127,7 @@ MoaTips
 </div>
 
 </div>
-<img class="ClubCircleImg" src="../../img/CircleImg/MoaImg.jpg">
+<img class="ClubCircleImg" src="../../img/LastSupper.jpg">
 
 </div>
 
