--- a/Classes/AnswerClass.html
+++ b/Classes/AnswerClass.html
@@ -72,12 +72,8 @@ Point:
 <div id="AnswerClass">
 
 <div id="OpinionTitle">
-各団体代表者の皆様へ
-
-クラブ・サークルを紹介するページに掲載する情報として、
-<br>以下の項目の記入をよろしくお願いします。
-<br>
-なお、記入していただいた情報はクラブ・サークル紹介にのみ使わせていただきます。 </div>
+授業だお
+</div>
 
 <div id="OpinionForm">
 <form action="">
