--- a/Classes/Classes.html
+++ b/Classes/Classes.html
@@ -91,7 +91,7 @@ Point:
 </p>
 
 <div class="AnswerClasses">
-<a href=""><img class="AnswerClassesimg" src="../img/button/Answer/answer1-1 茶色.png"></a>
+<a href=""><img class="AnswerClassesimg" src="../img/button/Answer/answer1-1.png"></a>
 </div>
 
 <div class="SeeClasses">
@@ -104,15 +104,6 @@ Point:
 <script type="text/javascript" src="../JS/jquery.js"></script>
 <script type="text/javascript" src="../JS/moa.js"></script>
 <script type="text/javascript">
-
-$(".Side").hover(
-	function(){
-		$(this).css('background-color','#e3fadb');
-	},function(){
-		$(this).css('background-color','white');
-
-	}
-)
 
 $(".SeeClassesimg").hover(function(){
 	$(this).attr('src','../img/button/SeeTips/seetips1-2.png');
