--- a/Login/Beginner.html
+++ b/Login/Beginner.html
@@ -6,9 +6,9 @@
 <link rel="stylesheet" href="../CSS/Beginner.css" type="text/css">
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 </head>
-<body style="background-image : url(../img/a9.png)">
+<body style="background-image : url(../img/back1.jpg)">
 <div id="container">
-<h1>ようこそ、MoaTipsへ。</h1>
+<div id="Welcome">ようこそ、MoaTipsへ。</div>
 <p id="intro">
 	このサイトは学生が情報を出し合い、集まった中から自分に必要なものをピックアップする
 	、AIU生のためのAIU情報共有サイトです。授業、留学、クラブ・サークル、新企画。
@@ -31,7 +31,7 @@
 
 
 <div id="CAroot">
-<img src="../img/CollapseCivilization.png" id="CArootimg" width="300px" height="400px">
+<img src="../img/Arnolfini.png" id="CArootimg" width="300px" height="400px">
 </div>
 
 
