--- a/Login/login.html
+++ b/Login/login.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="../CSS/login.css" type="text/css">
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 </head>
-<body style="background-image : url(../img/back1.jpg)">
+<body>
 <div class="container">
 
  <div id="logoarea">
