--- a/Circles/CircleMemberAnswer.html
+++ b/Circles/CircleMemberAnswer.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="../CSS/Top.css" type="text/css">
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 </head>
-<body style="background-image : url(../img/a9.png)">
+<body style="background-image : url(../img/back1.jpg)">
 <div id="Container">
 
 <div id="Sidebar">
@@ -71,7 +71,7 @@ Point:
 
 <div id="Opinion">
 
-<div id="OpinionCenterTitle">
+<div id="OpinionTitle">
 あなたの参加しているクラブ＆サークルについて教えてください。
 <br>
 クラブ&サークル名、参加頻度、充実度、雰囲気、面白みについて回答した上、
@@ -80,12 +80,12 @@ Point:
 </div>
 
 <div id="OpinionForm">
-<form action="">
+<form action="" name="form" onSubmit="return FormCheck()">
 
-<div id="OpinionInputCenter">
+<div id="OpinionInputLeft">
 <div class="inputdes">1.　あなたの参加頻度はどのくらいですか </div>
 <div class="inputbox">
-	<input type="checkbox" id="CircleMemberQ1-1" value="1"><label for="CircleMemberQ1-1" class="checkbox"> ほとんど参加してない</label>
+	<input type="checkbox" id="CircleMemberQ1-1" ><label for="CircleMemberQ1-1" class="checkbox"> ほとんど参加してない</label>
 	<br>
 	<input type="checkbox" id="CircleMemberQ1-2" ><label for="CircleMemberQ1-2" class="checkbox"> 時々参加している</label>
 	<br>
@@ -119,7 +119,7 @@ Point:
 <div class="inputdes">4. 活動のどこに面白みを感じていますか？</div>
 <div class="inputbox"><textarea class="textarea" cols="63" rows=3></textarea></div>
 
-	<input type="image" id="OpinionSubmitimgNPanswer" src="../img/button/FinalAnswer/FinalAnswer1-1.png" width="160px" height="80px">
+	<input type="image" name="field1" id="OpinionSubmitimgNPanswer" src="../img/button/FinalAnswer/FinalAnswer1-1.png" width="160px" height="80px">
 </div>
 	</form>
 </div>
