--- a/Circles/CircleLeaderAnswer.html
+++ b/Circles/CircleLeaderAnswer.html
@@ -101,6 +101,8 @@ Point:
 <div class="inputbox"><textarea class="textarea" cols="63" rows="10"></textarea></div>
 <div class="inputdes">9.　代表者の連絡先をお願いします。 </div>
 <div class="inputbox"><textarea class="textarea" cols="63" rows="2"></textarea></div>
+<div class="inputdes">10.　活動などの写真をもしよければお願いします。</div>
+<div class="inputbox"><input type="file"></div>
 </div>
 
 	
