--- a/Circles/ClubCircleList/ClubCircleExample.html
+++ b/Circles/ClubCircleList/ClubCircleExample.html
@@ -14,10 +14,10 @@
 <div id="SideLogo">
 <img src="../../img/uniA1-b.jpg" width="184px">
 </div>
-<div id="SideName" class="Side">
+<div id="SideName">
 Name:
 </div>
-<div id="SidePoint" class="Side">
+<div id="SidePoint">
 Point:
 </div></a>
 </div>
@@ -85,9 +85,7 @@ MoaTips
 メンバー数
 </p>
 <p class="ClubCircleListDifferent">
-ここにそれぞれの 国境を越えて多面的な交流が進むグローバル化の時代には、多様な価値観や世界観を互いに認め合い、諸問題の解決に努めながら、それぞれが未来を切り拓いていく力が求められます。
-
-こうした認識のもと、国際教養大学は「国際教養（International Liberal Arts）」という新しい教学理念を掲げ、英語をはじめとする外国語の卓越したコミュニケーション能力と豊かな教養、グローバルな専門知識を身に付けた実践力のある人材を養成し、国際社会と地域社会に貢献することを理念としています。 がはいるお
+7人
 </p>
 </div>
 
@@ -97,7 +95,7 @@ MoaTips
 活動日
 </p>
 <p class="ClubCircleListDifferent">
-ここにそれぞれの内容がはいるお
+未定。最近は毎週土曜日
 </p>
 </div>
 
@@ -108,9 +106,7 @@ MoaTips
 活動場所
 </p>
 <p class="ClubCircleListDifferent">
-ここにそれぞれの 国境を越えて多面的な交流が進むグローバル化の時代には、多様な価値観や世界観を互いに認め合い、諸問題の解決に努めながら、それぞれが未来を切り拓いていく力が求められます。
-
-こうした認識のもと、国際教養大学は「国際教養（International Liberal Arts）」という新しい教学理念を掲げ、英語をはじめとする外国語の卓越したコミュニケーション能力と豊かな教養、グローバルな専門知識を身に付けた実践力のある人材を養成し、国際社会と地域社会に貢献することを理念としています。 がはいるお
+サクラビレッジA201
 </p>
 </div>
 
@@ -122,12 +118,91 @@ MoaTips
 活動目的
 </p>
 <p class="ClubCircleListDifferent">
-めんつゆの存在意義と神の存在について解き明かしてみせます。 
+</p>
+</div>
+
+<div class="ClubCircleListCategorySet">
+<img class="ClubCircleListCategoryimg" src="../../img/CircleImg/sky/sky_s1.png">
+<p class="ClubCircleListCategory">
+活動内容
+</p>
+<p class="ClubCircleListDifferent">
+
+</p>
+</div>
+
+<div class="ClubCircleListCategorySet">
+<img class="ClubCircleListCategoryimg" src="../../img/CircleImg/sky/sky_s1.png">
+<p class="ClubCircleListCategory">
+年間行事
+</p>
+<p class="ClubCircleListDifferent">
+
+</p>
+</div>
+
+<div class="ClubCircleListCategorySet">
+<img class="ClubCircleListCategoryimg" src="../../img/CircleImg/sky/sky_s1.png">
+<p class="ClubCircleListCategory">
+PR
+</p>
+<p class="ClubCircleListDifferent">
+
+</p>
+</div>
+
+<div class="ClubCircleListCategorySet">
+<img class="ClubCircleListCategoryimg" src="../../img/CircleImg/sky/sky_s1.png">
+<p class="ClubCircleListCategory">
+代表者連絡先
+</p>
+<p class="ClubCircleListDifferent">
+moatipsforaiu@gmail.com
+</p>
+</div>
+
+<div class="ClubCircleListCategorySet">
+<img class="ClubCircleListCategoryimg" src="../../img/CircleImg/sky/sky_s1.png">
+<p class="ClubCircleListCategory">
+各部員参加頻度
+</p>
+<p class="ClubCircleListDifferent">
+
+</p>
+</div>
+
+<div class="ClubCircleListCategorySet">
+<img class="ClubCircleListCategoryimg" src="../../img/CircleImg/sky/sky_s1.png">
+<p class="ClubCircleListCategory">
+各部員充実度
+</p>
+<p class="ClubCircleListDifferent">
+
+</p>
+</div>
+
+<div class="ClubCircleListCategorySet">
+<img class="ClubCircleListCategoryimg" src="../../img/CircleImg/sky/sky_s1.png">
+<p class="ClubCircleListCategory">
+団体雰囲気
+</p>
+<p class="ClubCircleListDifferent">
+
+</p>
+</div>
+
+<div class="ClubCircleListCategorySet">
+<img class="ClubCircleListCategoryimg" src="../../img/CircleImg/sky/sky_s1.png">
+<p class="ClubCircleListCategory">
+活動の面白み
+</p>
+<p class="ClubCircleListDifferent">
+
 </p>
 </div>
 
 </div>
-<img class="ClubCircleImg" src="../../img/LastSupper.jpg">
+<img class="ClubCircleImg" src="../../img/CircleImg/MoaImg.jpg">
 
 </div>
 
