--- a/Login/login.html
+++ b/Login/login.html
@@ -33,7 +33,7 @@
 
  <div id="SideInfo">
   <br>
-  <a href="" id="SecretQuestion">パスワードを忘れた方</a>
+  <a href="" id="SecretQuestion">パスワードをお忘れの方</a>
   <br>
   <a href="" id="CreateAccount">アカウント作成</a>
   <br>
