--- a/Circles/ClubCircleList/ClubCircleExample.html
+++ b/Circles/ClubCircleList/ClubCircleExample.html
@@ -118,7 +118,11 @@ MoaTips
 活動目的
 </p>
 <p class="ClubCircleListDifferent">
-</p>
+おばあちゃんが言っていた...ニコニコの「知恵...
+ニコニコよ！本当の人狼対決を見せてやる！
+羽生棋聖vs渡辺竜王 将棋棋聖戦 第1局生中継
+自然との格闘アジアンラリー8年分一挙放送
+本格朗読劇 『極上文學 藪の中』配信決定！</p>
 </div>
 
 <div class="ClubCircleListCategorySet">
