--- a/Circles/CircleLeaderAnswer.html
+++ b/Circles/CircleLeaderAnswer.html
@@ -102,7 +102,7 @@ Point:
 <div class="inputdes">9.　代表者の連絡先をお願いします。 </div>
 <div class="inputbox"><textarea class="textarea" cols="63" rows="2"></textarea></div>
 <div class="inputdes">10.　活動などの写真をもしよければお願いします。</div>
-<div class="inputbox"><div class="DecoUp">アップロード</div><input id="file" type="file"></div>
+<div id="uploadimg"><div class="DecoUp">アップロード</div><input id="file" type="file"></div>
 </div>
 
 	
