--- a/Circles/ClubCircleList/tips-moatips.html
+++ b/Circles/ClubCircleList/tips-moatips.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<title>ClubCircleExample</title>
+<title>tips-moatips</title>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <meta http-equiv="Content-Style-Type" content="text/css">
 <link rel="stylesheet" href="../../CSS/Top.css" type="text/css">
@@ -77,6 +77,10 @@ Point:
 <p class="ClubCircleName">
 MoaTips
 </p>
+<div class="AnswerBox">
+<a href=""><img id="AnswerButton1" src="../../img/button/LeaderAnswer/bcho1-1.png" width="170px" height="80px"></a>
+<a href=""><img id="AnswerButton2" src="../../img/button/MemberAnswer/buin1-1.png" width="170px" height="80px"></a>
+</div>
 </div>
 
 <div class="ClubCircleListCategorySet">
@@ -85,7 +89,7 @@ MoaTips
 メンバー数
 </p>
 <p class="ClubCircleListDifferent">
-7人
+
 </p>
 </div>
 
@@ -95,7 +99,7 @@ MoaTips
 活動日
 </p>
 <p class="ClubCircleListDifferent">
-未定。最近は毎週土曜日
+
 </p>
 </div>
 
@@ -106,7 +110,7 @@ MoaTips
 活動場所
 </p>
 <p class="ClubCircleListDifferent">
-サクラビレッジA201
+
 </p>
 </div>
 
@@ -118,11 +122,8 @@ MoaTips
 活動目的
 </p>
 <p class="ClubCircleListDifferent">
-おばあちゃんが言っていた...ニコニコの「知恵...
-ニコニコよ！本当の人狼対決を見せてやる！
-羽生棋聖vs渡辺竜王 将棋棋聖戦 第1局生中継
-自然との格闘アジアンラリー8年分一挙放送
-本格朗読劇 『極上文學 藪の中』配信決定！</p>
+
+</p>
 </div>
 
 <div class="ClubCircleListCategorySet">
@@ -161,7 +162,7 @@ PR
 代表者連絡先
 </p>
 <p class="ClubCircleListDifferent">
-moatipsforaiu@gmail.com
+
 </p>
 </div>
 
@@ -214,6 +215,8 @@ moatipsforaiu@gmail.com
 <script type="text/javascript" src="../../JS/jquery.js"></script>
 <script type="text/javascript" src="../../JS/moa.js"></script>
 <script type="text/javascript">
+imgchange2("#AnswerButton1","LeaderAnswer","bcho");
+imgchange2("#AnswerButton2","MemberAnswer","buin");
 </script>
 </body>
 </html>
