--- a/Login/login.html
+++ b/Login/login.html
@@ -35,7 +35,7 @@
   <br>
   <a href="" id="SecretQuestion">パスワードをお忘れの方</a>
   <br>
-  <a href="" id="CreateAccount">アカウント作成</a>
+  <a href="" id="CreateAccount">新規アカウント作成</a>
   <br>
   <a href="#BeginnerContent" id='Beginner'>初めての方へ</a>
 
