--- a/Login/Beginner.html
+++ b/Login/Beginner.html
@@ -1,50 +1,52 @@
 <!DOCTYPE html>
 <head>
-<title>Beginner</title>
+<title>初めての方へ</title>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <meta http-equiv="Content-Style-Type" content="text/css">
-<link rel="stylesheet" href="../CSS/Beginner.css" type="text/css">
+<link rel="stylesheet" href="../CSS/login.css" type="text/css">
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 </head>
-<body style="background-image : url(../img/back1.jpg)">
+<body>
 <div id="container">
-<div id="Welcome">ようこそ、MoaTipsへ。</div>
-<p id="intro">
-	このサイトは学生が情報を出し合い、集まった中から自分に必要なものをピックアップする
-	、AIU生のためのAIU情報共有サイトです。授業、留学、クラブ・サークル、新企画。
-	４つのページであなたの必要な情報が見つけられます。 
-</p>
 
-<div id="howto">
-<h3>―使い方―</h3>
-<p >
-まずアンケートにお答えください。あなたの答えが、みんなが見るTipsとなります。答えていただいた内容は、私達MOAが集めてまとめ、ページに載せていきます。それぞれのページに置いてあるアンケートに答えるごとにポイントがもらえ、そのポイントでこのサイトのTipsを“買う”ことができます。
+<div id="BeginnerTitle">
+ようこそ、MoaTipsへ。
+</div>
+<div id="BeginnerContent">
 
+<div id="BeginnerAbout">
+<p class="BeginnerContentTitles">サイト概要</p>
+このサイトは学生が情報を出し合い、集まった中から自分に必要なものをピックアップする
+、AIU生のための情報共有サイトです。授業、留学、クラブ・サークル、新企画。
+<br>４つのページであなたの必要な情報が見つけられます。 
+
+</div>
+
+<div id="BeginnerHow">
+<p class="BeginnerContentTitles">使い方</p>
+まずアンケートにお答えください。あなたの答えが、みんなが見るTipsとなります。
+<br>
+答えていただいた内容は私達MOAが集めてまとめ、ページに載せていきます。
+<br>
+それぞれのページに置いてあるアンケートに答えるごとにポイントがもらえ、
+<br>そのポイントでこのサイトのTipsを“買う”ことができます。
+<br>
 答えてくださる方が多いほど、AIU生活が何でもわかる素敵なTipsサイトになります。
-
+<br>
 あなたの情報を必要としている人がいます。あなたの知っていることを教えてください。 
-</p>
-<form>
-<input type="image" src="../img/button/CreateAccount/CA5.png" id="CreateAccountButton" width="200px" height="70px">
-</form>
 </div>
 
-
-<div id="CAroot">
-<img src="../img/Arnolfini.png" id="CArootimg" width="300px" height="400px">
 </div>
-
-
+<div class="back">
+<a href=""><img id="CAButtonAtBeginner" src="../img/button/CreateAccount/CA2-1.png" width="200px" height="70px"></a>
+</div>
 
 </div>
 <script type="text/javascript" src="../JS/jquery.js"></script>
+<script type="text/javascript" src="../JS/moa.js"></script>
 <script type="text/javascript">
-$("#CreateAccountButton").hover(function(){
-	$(this).attr('src','../img/button/CreateAccount/CA6.png');
-},function(){
-	$(this).attr('src','../img/button/CreateAccount/CA5.png');
-});
-
+imgchange("#LoginButtonAtBeginner","Login","login");
+imgchange("#CAButtonAtBeginner","CreateAccount","CA");
 </script>
 </body>
 </html>
