--- a/Login/LoginRule.html
+++ b/Login/LoginRule.html
@@ -16,12 +16,15 @@
 
 <div id="RuleQuestionaire">
 <p class="RuleContentTitles">アンケート回答内容</p>
-このサイトはみなさんがアンケートで答え、提供してくださった内容が反映されます。
+このサイトはみなさんがアンケートで答え、提供してくださった内容が反映されます。言い換えれば、このMoaTipsというサイトはみなさんの答えでできています。
+<br>
+ですのであなたがてきとうに回答すればその分MoaTipsの有用性は自ずと下がるでしょう。
 <br>アンケートでは、特定の個人・団体について、見る人に悪い印象を与えるような表現、特に恣意的と思われる感想など、他の方に迷惑がかかるような内容は控えてください。
 <br>
-MOAでアンケートをまとめるときにこのような内容があった場合、ページ掲載を検討します。場合によっては回答者本人に修正、あるいは掲載しないことになります。
+MOAでアンケートをまとめるときにこのような内容があった場合、ページ掲載を検討します。場合によっては回答自体を修正、あるいは掲載しないことになります。
 <br>
 なお、このサイトに掲載された内容について異議がある場合、必ずサイト管理者にお知らせください。 
+
 </div>
 
 <div id="RuleOpenInfoManage">
