--- a/TOP/AnswerAll.html
+++ b/TOP/AnswerAll.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="../CSS/Top.css" type="text/css">
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 </head>
-<body style="background-image : url(../img/a9.png)">
+<body>
 <div id="Container">
 
 <div id="Sidebar">
