--- a/TOP/Mypage.html
+++ b/TOP/Mypage.html
@@ -79,7 +79,7 @@ Mypage
 アカウント
 </div>
 <div id="AccountContent">
-<table cellpadding="20px">
+<table cellpadding="10px">
 <tr><td>ID:</td><td>それぞれの情報がHere</td></tr>
 <tr><td>Point:</td><td>それぞれの情報がHere</td></tr>
 <tr><td>AIU入学年:</td><td>それぞれの情報がHere</td></tr>
@@ -103,33 +103,58 @@ Mypage
 授業
 </div>
 <div class="AnswerTipsCategoryContent">
-<a href="" class="AnswerTipsCategoryContentList">授業名</a>
+<a href="" class="AnswerTipsCategoryContentList">授業名Here</a>
 </div>
 
 <div class="AnswerTipsCategoryTitle">
 留学
 </div>
 <div class="AnswerTipsCategoryContent">
-大学名
+<a href="" class="AnswerTipsCategoryContentList">大学名Here</a>
 </div>
 
 <div class="AnswerTipsCategoryTitle">
 サークル
 </div>
 <div class="AnswerTipsCategoryContent">
-サークル名
+<a href="" class="AnswerTipsCategoryContentList">サークル名Here</a>
 </div>
 
 <div class="AnswerTipsCategoryTitle">
 新企画
 </div>
 <div class="AnswerTipsCategoryContent">
-企画名
+<a href="" class="AnswerTipsCategoryContentList">企画名Here</a>
 </div>
 
 </div>
 
 </div>
+
+
+<div id="Blank">
+<div id="BlankTitle">
+明日やろうは
+<br>
+馬鹿野郎。
+</div>
+<div id="BlankContent">
+今、「明日やろう」って思っただろ?
+どうせ明日も「やっぱり明日やろう」って思うんだろ?
+そんなお前は、馬鹿野郎さ。
+まぁ、今すぐできないのがオマエだもんな?
+いーっつもそうやって、嫌な事は後回し。
+後で困るのが自分だってわかってるのにな…。
+結局、「どうしよう！」「あの時やってれば…」って喚くんだろ?全く…情けない奴だよな、オマエってやつはよ。
+明日やろう?馬鹿やろぉぉぉっ!
+でも、俺は知ってるんだぜ…?
+「今の自分を変えたい…」って思っていることを。
+本当はやればできる奴なんだってことを。
+だったら、今すぐ自分を変えてみることから始めてみればいいじゃんよ。
+俺は、オマエを応援してる。誰よりも…な。
+</div>
+</div>
+
 
 <div id="answer">
 <div id="AnswerTitle">
@@ -170,28 +195,7 @@ Mypage
 
 
 
-<div id="Blank">
-<div id="BlankTitle">
-明日やろうは
-<br>
-馬鹿野郎。
-</div>
-<div id="BlankContent">
-今、「明日やろう」って思っただろ?
-どうせ明日も「やっぱり明日やろう」って思うんだろ?
-そんなお前は、馬鹿野郎さ。
-まぁ、今すぐできないのがオマエだもんな?
-いーっつもそうやって、嫌な事は後回し。
-後で困るのが自分だってわかってるのにな…。
-結局、「どうしよう！」「あの時やってれば…」って喚くんだろ?全く…情けない奴だよな、オマエってやつはよ。
-明日やろう?馬鹿やろぉぉぉっ!
-でも、俺は知ってるんだぜ…?
-「今の自分を変えたい…」って思っていることを。
-本当はやればできる奴なんだってことを。
-だったら、今すぐ自分を変えてみることから始めてみればいいじゃんよ。
-俺は、オマエを応援してる。誰よりも…な。
-</div>
-</div>
+
 
 </div>
 
