--- a/TOP/Top.html
+++ b/TOP/Top.html
@@ -140,6 +140,46 @@ SouthAmerica
 </div>
 </div>
 
+
+<div id="TopBeginner">
+<div id="TopBeginnerTitle">
+初めての方へ
+</div>
+<div id="TopBeginnerContent">
+このサイトはAIUに関する情報を出し合い
+<br>
+共有するためのものです。
+<br>
+授業、留学、サークル、新企画。
+<br>４つのページであなたの必要な情報が
+<br>見つけられます。 
+<br>
+なにから始めていいのやら、
+というあなた。
+まずはアンケートにお答えください。
+<br>
+あなたの答えが、
+<br>
+みんなが見るTipsとなります。
+<br>
+答えていただいた内容は
+<br>私達MOAが集めてまとめ、
+<br>
+ページに載せていきます。
+<br>
+アンケートに答えるごとにポイントがもらえ、
+そのポイントでこのサイトのTipsを
+<br>
+“買う”ことができます。
+<br>
+あなたの情報を必要としている人がいます。
+<br>
+あなたの知っていることを教えてください。 
+
+</div>
+</div>
+
+
 <div id="TopCircle">
 <div id="TopCircleTitle">
 サークル
@@ -166,13 +206,11 @@ SouthAmerica
 新企画
 </div>
 <div id="TopNewProjectContent">
-<div class="TopNewProjectContent">
 <a href="" id="TopNewProjectList"class="TopPanel">企画名Here</a>
 </div>
 
 </div>
 
-</div>
 
 <div id="TopInvite">
 <div id="TopInviteTitle">
@@ -181,9 +219,7 @@ MOA
 メンバー募集中
 </div>
 <div id="TopInviteContent">
-現在、私たちMOAはこのMoaTipsを共に運営、管理してくれる人員募集
-<br>
-を行っています。
+現在、私たちMOAはこのMoaTipsを共に運営、管理してくれる人員を募集しています。
 <br>
 Webサイト作りに興味のある人、
 <br>
@@ -203,6 +239,35 @@ Webサイト作りに興味のある人、
 
 </div>
 </div>
+
+
+<div id="TopRule">
+<div id="TopRuleTitle">
+Rule
+</div>
+<div id="TopRuleContent">
+現在、私たちMOAはこのMoaTipsを共に運営、管理してくれる人員を募集しています。
+<br>
+Webサイト作りに興味のある人、
+<br>
+デザインに興味のある人、
+<br>
+プログラミングに興味のある人、
+<br>
+経験の有無は問いません。
+<br>
+熱意さえあれば私たちは常にあなたを
+<br>
+歓迎しています。
+<br>
+私たちと共に
+<br>
+あなたのリアルを充実させませんか？
+
+</div>
+</div>
+
+
 
 
 
